{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 30,
  "lineage": "2a76a9d0-a2c2-f569-31f3-f6fd00c6a481",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-0681e303a8efe2e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0681e303a8efe2e1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-subnet"
            },
            "tags_all": {
              "Name": "terra-subnet"
            },
            "vpc_id": "vpc-095cd15c99baabd30"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_eip",
      "name": "by_allocation_id",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:elastic-ip/eipalloc-0d4b8f9ba7bf858e7",
            "association_id": "eipassoc-0edf0fd3cd3a1fbf1",
            "domain": "vpc",
            "id": "eipalloc-0d4b8f9ba7bf858e7",
            "instance_id": "i-03ffa549606226db0",
            "network_interface_id": "eni-0957f8274eb43ffb0",
            "network_interface_owner_id": "590183884095",
            "private_dns": "ip-172-31-32-93.ec2.internal",
            "private_ip": "172.31.32.93",
            "public_dns": "ec2-44-218-41-3.compute-1.amazonaws.com",
            "public_ip": "44.218.41.3",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_with_apache",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dea0741c00d15478",
            "arn": "arn:aws:ec2:us-east-1:590183884095:instance/i-03ffa549606226db0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ffa549606226db0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0957f8274eb43ffb0",
            "private_dns": "ip-172-31-32-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.93",
            "public_dns": "ec2-44-218-41-3.compute-1.amazonaws.com",
            "public_ip": "44.218.41.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06995f74ece9b8490",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh_terra"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d14f823166b5fae9",
            "tags": {
              "Name": "terra-2"
            },
            "tags_all": {
              "Name": "terra-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0add7d2a8180f063c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:security-group/sg-0add7d2a8180f063c",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-0add7d2a8180f063c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP_terra",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH_terra",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_terra",
            "name_prefix": "",
            "owner_id": "590183884095",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095cd15c99baabd30"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:network-acl/acl-07ea2a45c8b53ec6e",
            "default_network_acl_id": "acl-07ea2a45c8b53ec6e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07ea2a45c8b53ec6e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "590183884095",
            "subnet_ids": [
              "subnet-03b66eac7c98ab2b3",
              "subnet-08b84dd664b59232b",
              "subnet-0a355c5f139638460",
              "subnet-0c0bd0e834732d9fd"
            ],
            "tags": {
              "Name": "my-demo-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-default"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-0ae7fc15b247c7d7d",
            "default_route_table_id": "rtb-0ae7fc15b247c7d7d",
            "id": "rtb-0ae7fc15b247c7d7d",
            "owner_id": "590183884095",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-demo-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:security-group/sg-02cde629f03114542",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02cde629f03114542",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "590183884095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-demo-vpc-terra-default"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-default"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032922f70296c685c",
            "arn": "arn:aws:ec2:us-east-1:590183884095:elastic-ip/eipalloc-032922f70296c685c",
            "domain": "vpc",
            "id": "eipalloc-032922f70296c685c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-80-45-228.compute-1.amazonaws.com",
            "public_ip": "54.80.45.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-demo-vpc-terra-us-east-1a"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:internet-gateway/igw-019389823cac2e659",
            "id": "igw-019389823cac2e659",
            "owner_id": "590183884095",
            "tags": {
              "Name": "my-demo-vpc-terra"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032922f70296c685c",
            "association_id": "eipassoc-0402078e55fcfa8a4",
            "connectivity_type": "public",
            "id": "nat-0d4f334e61626bb4c",
            "network_interface_id": "eni-021d5e6ccff076a1e",
            "private_ip": "10.10.101.193",
            "public_ip": "54.80.45.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0bd0e834732d9fd",
            "tags": {
              "Name": "my-demo-vpc-terra-us-east-1a"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078c96d79c916de461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4f334e61626bb4c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078c96d79c916de46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019389823cac2e659",
            "id": "r-rtb-0dd1222974a0d811c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd1222974a0d811c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-078c96d79c916de46",
            "id": "rtb-078c96d79c916de46",
            "owner_id": "590183884095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-demo-vpc-terra-private"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-046a994a944422747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-0dd1222974a0d811c",
            "id": "rtb-0dd1222974a0d811c",
            "owner_id": "590183884095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-demo-vpc-terra-public"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046a994a944422747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c71a506aae0f114",
            "route_table_id": "rtb-078c96d79c916de46",
            "subnet_id": "subnet-03b66eac7c98ab2b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06977a9582df90604",
            "route_table_id": "rtb-078c96d79c916de46",
            "subnet_id": "subnet-08b84dd664b59232b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ded7a59e7b71624",
            "route_table_id": "rtb-0dd1222974a0d811c",
            "subnet_id": "subnet-0c0bd0e834732d9fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0749439687132f2f8",
            "route_table_id": "rtb-0dd1222974a0d811c",
            "subnet_id": "subnet-0a355c5f139638460"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-03b66eac7c98ab2b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b66eac7c98ab2b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-demo-vpc-terra-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-private-us-east-1a"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-08b84dd664b59232b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b84dd664b59232b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-demo-vpc-terra-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-private-us-east-1b"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-0c0bd0e834732d9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0bd0e834732d9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-demo-vpc-terra-public-us-east-1a"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-public-us-east-1a"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-0a355c5f139638460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a355c5f139638460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-demo-vpc-terra-public-us-east-1b"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra-public-us-east-1b"
            },
            "vpc_id": "vpc-046a994a944422747"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:vpc/vpc-046a994a944422747",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07ea2a45c8b53ec6e",
            "default_route_table_id": "rtb-0ae7fc15b247c7d7d",
            "default_security_group_id": "sg-02cde629f03114542",
            "dhcp_options_id": "dopt-023b632caf355e7c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046a994a944422747",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae7fc15b247c7d7d",
            "owner_id": "590183884095",
            "tags": {
              "Name": "my-demo-vpc-terra"
            },
            "tags_all": {
              "Name": "my-demo-vpc-terra"
            }
          }
        }
      ]
    }
  ]
}